Avoid WP form overflow with country flag dropdown

--- a/styles/wp-form.less
+++ b/styles/wp-form.less
@@ -127,6 +127,10 @@
       font-size: 14px;
     }
 
+    .iti__country-list {
+      position: fixed !important;  // Put it above popup!
+    }
+
     input#Mobile {
       padding-left: 52px;
     }
